# Build-Diffusion-Model-From-Scratch

./: README.md  app.py  main.py  pyproject.toml
src/: attention.py  clip.py  ddpm.py  decoder.py  demo.ipynb  diffusion.py  encoder.py  model_converter.py  model_loader.py  pipeline.py
src/models/: clip.py  model_loader.py
src/models/unet/: diffusion.py
src/models/vae/: decoder.py  encoder.py
src/pipelines/: pipeline.py
src/schedulers/: ddpm.py
